# rstat

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: release-docker.yaml  release-note.yaml
.sqlx/: query-04945e3519c4a252adfdb290db0195e6de9ada5eeace02ae9f8ed61324b78dda.json  query-07fc5e4551c9711a45b4325e57f340eccd6220129b31d0f1ded280fffc7b0e5f.json  query-0c6bed5dac103c2dd09ba52d8195362e18ce25780f641260c265a77e64a5bc63.json  query-1826ec9037a53ed05c68fda4f67df69004eb19b381f75de9678d7ea9615864cd.json  query-1995732af6c3df57e9d2593fe8eebbfb85598f6b0dd99666fac05c81ad3e6f4f.json  query-2a7741722bddb4c2a6459a54f0993acdcf1fe9fb4a56ec7267cecb32f112d9b2.json  query-488575cf0b60604fbbda42c14630e1eaaeb517e8e4728aa09453d1681ddaceea.json  query-49671c575f7ede4ef186a32ca8952b6e54db52a07a2af770fe92379b6696b0ec.json  query-4e00225f2a376d529310f33f3497863401f4d2224d0962a937da8928bec167f2.json  query-52b5130b1ca3a1d7dae6e69c91d8e41883f5257dbf260b66c8bb6c729c1e4b04.json  query-6a2274dbed331a7d0861a7736a655f0065e1752b6efa80294ebf99e9f1309591.json  query-6b053a3f3378dfbc2600d6fd4919b210835c1f998687328adeae4b2a35b2e4a1.json  query-7a6e7788ae5c4356c9b47d743a0eaaf74d0aff3d2f9a96f28e046d916b31461a.json  query-7c4f4db48b4f5d6b13a93bc93a9f508168aa27e3436442dc623d6a6c90b6e761.json  query-a4a8a7f103ba3de137ee0ca8559e7179dd09a76158751b510e5d7c863547b563.json  query-a7eed84a975479255991e2180a3bc0431dbf93bbd162aafec89329f7e5f277cb.json  query-a9f2b04a08b02048bdde438fb813d051a9d59de037e828ca3de0aad4b88d5568.json  query-ac9d788571d60e4d641a3ad4326ec6f9c9e923b17775d433ee5b5771e2b54206.json  query-d58c0c4d5bca91292c9cf5d3db275030b96bac0cb4d07fcb21711c1cb38d5502.json  query-eae5fb69f679ca0c10189ad9e9e00a3d5693f573c2f2c8a97df8deb2c64deea8.json  query-fca55467cc99ccb0edded4c6cc9048d1f95dd7cb6b53870758208b0cae96806b.json
config/: services.yaml  simple-services.yaml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs
crates/core/: Cargo.toml
crates/core/src/: healthcheck.rs  lib.rs  service.rs
crates/healthcheck/: Cargo.toml
crates/healthcheck/src/: db.rs  http.rs  lib.rs  tcp.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: calculator.rs  db.rs  lib.rs  models.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  metrics_updater.rs
crates/seeder/: Cargo.toml
crates/seeder/src/: data_generator.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/service/: Cargo.toml
crates/service/src/: db.rs  fixtures.rs  lib.rs
frontend/: API_SETUP.md  Dockerfile  bun.lockb  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/: error-page.tsx  header.tsx  service-chart.tsx  service-status-card.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 20250610114334_init.sql  20250629083555_add_next_run_field.sql  20250630000000_add_service_metrics.sql
src/: main.rs  notifier.rs  server.rs  utils.rs
src/api/: mod.rs
src/cli/: mod.rs
src/healthcheck/: db.rs  http.rs  mod.rs  tcp.rs
src/scheduler/: metrics_updater.rs  mod.rs
src/seeder/: data_generator.rs  mod.rs
src/service/: db.rs  fixtures.rs  metrics.rs  metrics_calculator.rs  metrics_db.rs  mod.rs
test/: app.py  main.py  pyproject.toml
