[package]
name = "rstat"
authors = ["Abel Hristodor <habelor@gmail.com>"]
description = "An async rust health check web app"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["tracing"] }
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
http = "1.3.1"
http-serde = "2.1.1"
reqwest = { version = "0.12.17", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["json", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["time"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
