[package]
name = "rstat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rstat-core = { path = "../core" }
rstat-service = { path = "../service" }
rstat-healthcheck = { path = "../healthcheck" }
rstat-metrics = { path = "../metrics" }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true } 