[package]
name = "rstat-seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
rstat-core = { path = "../core" }
rstat-service = { path = "../service" }
rstat-metrics = { path = "../metrics" }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true } 