[package]
name = "rstat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rstat-core = { path = "../core" }
rstat-service = { path = "../service" }
rstat-healthcheck = { path = "../healthcheck" }
rstat-metrics = { path = "../metrics" }
rstat-scheduler = { path = "../scheduler" }
rstat-api = { path = "../api" }
rstat-cli = { path = "../cli" }
rstat-seeder = { path = "../seeder" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true } 