[package]
name = "rstat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rstat-core = { path = "../core" }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
http = { workspace = true } 